--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="item">6</div>
       <div class="item">7</div>
       <div class="item">8</div>
-     <!--  <div class="item">9</div>
-      <div class="item">10</div> -->
+      <div class="item">9</div>
+      <div class="item">10</div>
     </div>
   </body>
 </html>
