using auto-fit, auto-fill, and minmax to create responsive layouts

--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item1">1</div>
-      <div class="item item2">2</div>
-      <div class="item item3">3</div>
-      <div class="item item4">4</div>
-      <div class="item item5">5</div>
-      <div class="item item6">6</div>
-      <div class="item item7">7</div>
-      <div class="item item8">8</div>
-      <div class="item item9">9</div>
-      <div class="item item10">10</div>
-      <div class="item item11">11</div>
-      <div class="item item12">12</div>
-      <div class="item item13">13</div>
-      <div class="item item14">14</div>
-      <div class="item item15">15</div>
-      <div class="item item16">16</div>
-      <div class="item item17">17</div>
-      <div class="item item18">18</div>
-      <div class="item item19">19</div>
-      <div class="item item20">20</div>
-      <div class="item item21">21</div>
-      <div class="item item22">22</div>
-      <div class="item item23">23</div>
-      <div class="item item24">24</div>
-      <div class="item item25">25</div>
-      <div class="item item26">26</div>
-      <div class="item item27">27</div>
-      <div class="item item28">28</div>
-      <div class="item item29">29</div>
-      <div class="item item30">30</div>
+      <div class="item item1">Item 01</div>
+      <div class="item item2">Good Morning</div>
+      <div class="item item3">Item 03</div>
+      <div class="item item4">Item 04</div>
+       <!--<div class="item item5">Item 05</div>
+      <div class="item item6">Item 06</div>
+      <div class="item item7">Item 07</div>
+      <div class="item item8">Item 08</div>
+      <div class="item item9">Item 09</div>
+      <div class="item item10">Item 10</div>
+      <div class="item item11">Item 11</div>
+      <div class="item item12">Item 12</div>
+      <div class="item item13">Item 13</div>
+      <div class="item item14">Item 14</div>
+      <div class="item item15">Item 15</div>
+      <div class="item item16">Item 16</div>
+      <div class="item item17">Item 17</div>
+      <div class="item item18">Item 18</div>
+      <div class="item item19">Item 19</div>
+      <div class="item item20">Item 20</div>
+      <div class="item item21">Item 21</div>
+      <div class="item item22">Item 22</div>
+      <div class="item item23">Item 23</div>
+      <div class="item item24">Item 24</div>
+      <div class="item item25">Item 25</div>
+      <div class="item item26">Item 26</div>
+      <div class="item item27">Item 27</div>
+      <div class="item item28">Item 28</div>
+      <div class="item item29">Item 29</div>
+      <div class="item item30">Item 30</div> -->
     </div>
   </body>
 </html>
