define rows and columns using grid-template-areas

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item1">Item 01</div>
-      <div class="item item2">Good Morning</div>
-      <div class="item item3">Item 03</div>
-      <div class="item item4">Item 04</div>
-       <!--<div class="item item5">Item 05</div>
+      <div class="item item1">
+        <p>I'm Sidebar #1</p>
+      </div>
+      <div class="item item2">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+          neque a.
+        </p>
+        <p>Lorem ipsum d.</p>
+      </div>
+      <div class="item item3">
+        <p>I'm Sidebar #2</p>
+      </div>
+      <div class="item item4">
+        <p>I'm the footer</p>
+      </div>
+      <!--<div class="item item5">Item 05</div>
       <div class="item item6">Item 06</div>
       <div class="item item7">Item 07</div>
       <div class="item item8">Item 08</div>
