name grid lines

--- a/index.html
+++ b/index.html
@@ -8,23 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item1">
-        <p>I'm Sidebar #1</p>
-      </div>
-      <div class="item item2">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
-          neque a.
-        </p>
-        <p>Lorem ipsum d.</p>
-      </div>
-      <div class="item item3">
-        <p>I'm Sidebar #2</p>
-      </div>
-      <div class="item item4">
-        <p>I'm the footer</p>
-      </div>
-      <!--<div class="item item5">Item 05</div>
+      <div class="item item1">1</div>
+      <div class="item item2">2</div>
+      <div class="item item3">3</div>
+      <div class="item item4">4</div>
+      <div class="item item5">Item 05</div>
       <div class="item item6">Item 06</div>
       <div class="item item7">Item 07</div>
       <div class="item item8">Item 08</div>
@@ -49,7 +37,7 @@
       <div class="item item27">Item 27</div>
       <div class="item item28">Item 28</div>
       <div class="item item29">Item 29</div>
-      <div class="item item30">Item 30</div> -->
+      <div class="item item30">Item 30</div>
     </div>
   </body>
 </html>
