--- a/index.html
+++ b/index.html
@@ -7,37 +7,153 @@
     <title>Css Grid</title>
   </head>
   <body>
-    <div class="container">
-      <div class="item item1">1</div>
-      <div class="item item2">2</div>
-      <div class="item item3">I'M AWESOME</div>
-      <div class="item item4">4</div>
-      <div class="item item5">5</div>
-      <div class="item item6">6</div>
-      <div class="item item7">7</div>
-      <div class="item item8">8</div>
-      <div class="item item9">9</div>
-      <div class="item item10">10</div>
-      <div class="item item11">11</div>
-      <div class="item item12">12</div>
-      <div class="item item13">13</div>
-      <div class="item item14">14</div>
-      <div class="item item15">15</div>
-      <div class="item item16">16</div>
-      <div class="item item17">17</div>
-      <div class="item item18">18</div>
-      <div class="item item19">19</div>
-      <div class="item item20">20</div>
-      <div class="item item21">21</div>
-      <div class="item item22">22</div>
-      <div class="item item23">23</div>
-      <div class="item item24">24</div>
-      <div class="item item25">25</div>
-      <div class="item item26">26</div>
-      <div class="item item27">27</div>
-      <div class="item item28">28</div>
-      <div class="item item29">29</div>
-      <div class="item item30">30</div>
+    <div class="albums">
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-1.jpeg" alt="gal-1" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-2.jpeg" alt="gal-2" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-3.jpeg" alt="gal-3" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-4.jpeg" alt="gal-4" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-5.jpeg" alt="gal-5" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-6.jpeg" alt="gal-6" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-7.jpeg" alt="gal-7" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-8.jpeg" alt="gal-8" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-9.jpeg" alt="gal-9" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+
+      <div class="album">
+        <img class="album__artwork" src="./img/gal-10.jpeg" alt="gal-10" />
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+            at tempora quam quia. Minus, omnis ea.
+          </p>
+          <p class="album__desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
